# flask-docker-example

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.circleci/: config.yml
app/: pyproject.toml  whoami.py
utils/pylint/: Dockerfile
webapp/: Makefile  pyproject.toml  whoami.py
