[tool.poetry]
name = "flask-docker-example"
version = "0.1.0"
description = "Flask dockerize example"
license = "MIT"
authors = [
    "João Maia <joao@joaovrmaia.com>"
]
readme = "README.md"
repository = "https://github.com/jvrmaia/flask-docker-example"
homepage = "https://github.com/jvrmaia/flask-docker-example"


[tool.poetry.dependencies]
python = "3.10.5"
Flask = "^2.1.2"
python-decouple = "^3.6"
gunicorn = "^20.1.0"
gevent = "^21.12.0"



[tool.poetry.dev-dependencies]
black = "^22.6.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
